@@ -1,3 +1,5 @@
+Development
+	Fix up some issues with apple trailers
 1.0.3
 	Allow files > 2GB to be loaded in NP_FULL mode
 	Always include gecko-mediaplayer.schema in tar file
